[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/level_2.gd" type="Script" id=2]
[ext_resource path="res://tiles.tres" type="TileSet" id=3]
[ext_resource path="res://soundmaker/soundmaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level parts/spawn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Level parts/air_spawn.tscn" type="PackedScene" id=7]

[node name="level_2" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -393181, 2, 65539, -327646, 2, 0, -327645, 2, 131074, -262132, 3, 1, -262121, 2, 65539, -262110, 2, 65539, -196596, 3, 65536, -196585, 2, 65539, -196574, 2, 131072, -196573, 2, 3, -131060, 3, 65536, -131052, 2, 0, -131051, 2, 2, -131050, 2, 2, -131049, 2, 131074, -131037, 2, 65539, -65524, 3, 65536, -65516, 2, 65539, -65502, 2, 0, -65501, 2, 131074, -65483, 2, 0, -65482, 2, 1, -65481, 2, 65539, 12, 3, 65536, 20, 2, 65539, 34, 2, 65539, 51, 2, 0, 52, 2, 1, 53, 2, 131074, 65548, 3, 65536, 65556, 2, 65539, 65570, 2, 65539, 65586, 2, 0, 65587, 2, 131074, 131084, 3, 65536, 131092, 2, 65539, 131106, 2, 65539, 131121, 2, 0, 131122, 2, 131074, 196620, 3, 65536, 196628, 2, 65539, 196642, 2, 65539, 196656, 2, 0, 196657, 2, 131074, 262156, 3, 65536, 262164, 2, 65539, 262178, 2, 65539, 262189, 2, 0, 262190, 2, 2, 262191, 2, 2, 262192, 2, 131074, 327692, 3, 65536, 327700, 2, 65539, 327714, 2, 65539, 327721, 2, 0, 327722, 2, 1, 327723, 2, 2, 327724, 2, 2, 327725, 2, 131074, 327726, 3, 0, 327727, 3, 1, 327728, 3, 131073, 327729, 3, 1, 327730, 3, 131073, 327731, 3, 1, 327732, 3, 1, 327733, 3, 131073, 327734, 3, 131073, 327735, 3, 3, 393228, 3, 65536, 393236, 2, 65539, 393250, 2, 65539, 393254, 2, 0, 393255, 2, 2, 393256, 2, 2, 393257, 2, 131074, 393261, 3, 0, 393262, 3, 131074, 393271, 3, 131072, 393272, 3, 131073, 393273, 3, 131073, 393274, 3, 131073, 393275, 3, 1, 393276, 3, 1, 393277, 3, 131073, 393278, 3, 131073, 393279, 3, 3, 458764, 3, 65536, 458772, 2, 131072, 458773, 2, 3, 458786, 2, 65539, 458790, 2, 65539, 458794, 3, 0, 458795, 3, 1, 458796, 3, 1, 458797, 3, 131074, 458815, 3, 131072, 458816, 3, 131073, 458817, 3, 131073, 458818, 3, 1, 458819, 3, 1, 458820, 3, 3, 524300, 3, 65536, 524309, 2, 65539, 524322, 2, 65539, 524326, 2, 65539, 524327, 3, 0, 524328, 3, 131073, 524329, 3, 131073, 524330, 3, 131074, 524356, 3, 131072, 524357, 3, 1, 589836, 3, 65536, 589845, 2, 65539, 589858, 2, 65539, 589861, 2, 0, 589862, 2, 131074, 589863, 3, 65536, 655372, 3, 65536, 655381, 2, 65539, 655394, 2, 131072, 655395, 2, 1, 655396, 2, 1, 655397, 2, 131074, 655398, 3, 0, 655399, 3, 131074, 720908, 3, 65536, 720917, 2, 131072, 720918, 2, 3, 720934, 3, 65536, 786444, 3, 1, 786454, 2, 131072, 786455, 2, 3, 786470, 3, 65536, 851991, 2, 131072, 851992, 2, 3, 852006, 3, 131072, 852007, 3, 1, 852008, 3, 1, 852009, 3, 131073, 852010, 3, 131073, 852011, 3, 131073, 852012, 3, 1, 852013, 3, 1, 852014, 3, 1, 852015, 3, 1, 852016, 3, 131073, 852017, 3, 3, 917528, 2, 65539, 917553, 3, 131072, 917554, 3, 131073, 917555, 3, 131073, 917556, 3, 131073, 917557, 3, 131073, 917558, 3, 3, 983064, 2, 131072, 983065, 2, 3, 983094, 3, 131072, 983095, 3, 131073, 983096, 3, 131073, 983097, 3, 131073, 983098, 3, 131073, 983099, 3, 1, 983100, 3, 3, 1048601, 2, 131072, 1048602, 2, 3, 1048636, 3, 131072, 1048637, 3, 131073, 1048638, 3, 1, 1048639, 3, 3, 1114138, 2, 65536, 1114139, 2, 2, 1114140, 2, 2, 1114141, 2, 1, 1114142, 2, 1, 1114143, 2, 1, 1114144, 2, 1, 1114145, 2, 1, 1114146, 2, 2, 1114147, 2, 1, 1114148, 2, 2, 1114149, 2, 2, 1114150, 2, 1, 1114151, 2, 1, 1114152, 2, 1, 1114153, 2, 2, 1114154, 2, 1, 1114155, 2, 2, 1114156, 2, 1, 1114157, 2, 2, 1114158, 2, 1, 1114159, 2, 2, 1114160, 2, 2, 1114161, 2, 3, 1114175, 3, 131072, 1114176, 3, 3, 1179667, 3, 1, 1179674, 2, 65539, 1179697, 2, 131072, 1179698, 2, 3, 1179712, 3, 131072, 1179713, 3, 3, 1245202, 3, 0, 1245203, 3, 131074, 1245210, 2, 65539, 1245234, 2, 131072, 1245235, 2, 3, 1245249, 3, 131072, 1245250, 3, 1, 1245251, 3, 1, 1310738, 3, 65536, 1310746, 2, 65539, 1310771, 2, 65539, 1376274, 3, 65536, 1376282, 2, 65539, 1376307, 2, 131072, 1376308, 2, 3, 1441810, 3, 65536, 1441817, 2, 0, 1441818, 2, 131074, 1441844, 2, 131072, 1441845, 2, 2, 1441846, 2, 3, 1507345, 3, 0, 1507346, 3, 131074, 1507353, 2, 65539, 1507382, 2, 131072, 1507383, 2, 3, 1572880, 3, 0, 1572881, 3, 131074, 1572889, 2, 65539, 1572919, 2, 131072, 1572920, 2, 3, 1703921, 3, 1, 1703922, 3, 131073, 1703923, 3, 131073, 1703924, 3, 131073, 1703925, 3, 131073, 1703926, 3, 1, 1703927, 3, 131073, 1703928, 3, 1, 1703929, 3, 131073, 1703930, 3, 131073, 1703931, 3, 1, 1703932, 3, 131073, 1703933, 3, 1, 1703934, 3, 131073, 1703935, 3, 131073, 1638400, 3, 131073, 1638401, 3, 1, 1638402, 3, 131073, 1638403, 3, 1, 1638404, 3, 1, 1638405, 3, 131073, 1638406, 3, 131073, 1638407, 3, 131073, 1638408, 3, 131073, 1638409, 3, 1, 1638410, 3, 131073, 1638411, 3, 1, 1638412, 3, 131073, 1638413, 3, 1, 1638414, 3, 131073, 1638415, 3, 131073, 1638416, 3, 131074, 1638425, 2, 65539, 1638456, 2, 131072, 1638457, 2, 1, 1638458, 2, 1, 1638459, 2, 1, 1638460, 2, 1, 1638461, 2, 1, 1638462, 2, 65539, 1703961, 2, 65539, 1769497, 2, 65539, 1835033, 2, 65539, 1900569, 2, 65539, 2031600, 2, 65539, 2031601, 2, 2, 2031602, 2, 1, 2031603, 2, 1, 2031604, 2, 1, 2031605, 2, 1, 2031606, 2, 2, 2031607, 2, 2, 2031608, 2, 1, 2031609, 2, 2, 2031610, 2, 2, 2031611, 2, 1, 2031612, 2, 2, 2031613, 2, 1, 2031614, 2, 1, 2031615, 2, 2, 1966080, 2, 2, 1966081, 2, 2, 1966082, 2, 2, 1966083, 2, 2, 1966084, 2, 2, 1966085, 2, 3, 1966105, 2, 65539, 2031621, 2, 131072, 2031622, 2, 2, 2031623, 2, 2, 2031624, 2, 1, 2031625, 2, 2, 2031626, 2, 2, 2031627, 2, 2, 2031628, 2, 2, 2031629, 2, 1, 2031630, 2, 2, 2031631, 2, 1, 2031632, 2, 2, 2031633, 2, 1, 2031634, 2, 1, 2031635, 2, 1, 2031636, 2, 2, 2031637, 2, 1, 2031638, 2, 1, 2031639, 2, 1, 2031640, 2, 2, 2031641, 2, 131074 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 786443, 5, 0, 786444, 5, 1, 786445, 5, 1, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 851979, 5, 0, 851980, 4, 0, 851982, 5, 0, 851983, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 917513, 1, 65536, 917514, 1, 1, 917515, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 1, 1, 917525, 1, 65540, 917526, 1, 65540, 917527, 1, 65540, 917528, 1, 131074, 917529, 1, 65540, 917530, 1, 131074, 917531, 1, 1, 917532, 1, 1, 917533, 1, 131074, 917534, 1, 65540, 917535, 1, 131074, 917536, 1, 1, 917537, 1, 1, 917538, 1, 2, 983049, 1, 262147, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983074, 1, 131076, 1048585, 1, 196612, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048610, 1, 262147, 1114121, 1, 65539, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114146, 1, 65539, 1179657, 1, 262148, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 5, 0, 1179682, 1, 327683, 1245193, 1, 5, 1245215, 5, 0, 1245216, 5, 0, 1245217, 5, 0, 1245218, 5, 0, 1245219, 5, 0, 1245220, 5, 0, 1245221, 5, 0, 1245222, 5, 0, 1245223, 5, 0, 1310729, 1, 131072, 1310730, 1, 65540, 1310731, 1, 65540, 1310732, 1, 131074, 1310733, 1, 131074, 1310734, 1, 65540, 1310735, 1, 2, 1310751, 5, 0, 1310752, 5, 0, 1310753, 5, 0, 1310754, 5, 0, 1310755, 5, 0, 1310756, 5, 0, 1310757, 5, 0, 1310758, 5, 0, 1310759, 5, 0, 1376271, 1, 131076, 1376287, 5, 0, 1376288, 5, 0, 1376289, 5, 0, 1376290, 5, 0, 1376291, 5, 0, 1376292, 5, 0, 1376293, 5, 0, 1376294, 5, 0, 1376295, 5, 0, 1441807, 1, 196612, 1441823, 5, 0, 1441824, 5, 0, 1441825, 5, 0, 1441826, 5, 0, 1441827, 5, 0, 1441828, 5, 0, 1441829, 5, 0, 1441830, 5, 0, 1441831, 5, 0, 1507343, 1, 131072, 1507344, 1, 131074, 1507345, 1, 65540, 1507346, 1, 131074, 1507347, 1, 131074, 1507348, 1, 65540, 1507349, 1, 65540, 1507350, 1, 131074, 1507351, 1, 131074, 1507352, 1, 65540, 1507353, 1, 131074, 1507354, 1, 65540, 1507355, 1, 131074, 1507356, 1, 131074, 1507357, 1, 65540, 1507358, 1, 1, 1507359, 5, 0, 1507360, 5, 0, 1507361, 5, 0, 1507362, 5, 0, 1507363, 5, 0, 1507364, 5, 0, 1507365, 4, 0, 1507367, 5, 0, 1572895, 5, 0, 1572896, 5, 0, 1572897, 5, 0, 1572898, 5, 0, 1572899, 5, 0, 1572900, 5, 0, 1572903, 5, 0, 1638431, 5, 0, 1638432, 5, 0, 1638433, 5, 0, 1638434, 5, 0, 1638435, 5, 0, 1638436, 5, 0, 1638437, 5, 1, 1638438, 5, 1, 1638439, 5, 0 )

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="air_spawn_1" parent="cam" instance=ExtResource( 7 )]
position = Vector2( -328, -248 )

[node name="air_spawn_2" parent="cam" instance=ExtResource( 7 )]
position = Vector2( 328, 248 )

[node name="soundmaker" parent="cam" instance=ExtResource( 5 )]
position = Vector2( 0, 12 )

[node name="spawn_1" parent="." instance=ExtResource( 6 )]
position = Vector2( 128, 164 )

[node name="spawn_2" parent="." instance=ExtResource( 6 )]
position = Vector2( 528, 324 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 212, 192 )

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 480, 136 )
collision_layer = 8
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -80, -60 )
polygon = PoolVector2Array( 76, 92, 76, 168, 160, 168, 160, 280, 16, 280, 16, 244, -236, 244, -236, 196, -332, 196, -332, 92, -304, 92, -304, 56, -336, -80, -400, -80, -404, 416, 248, 416, 248, -80, -336, -80, -304, 56, -160, 56, -160, 92 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( -240, 40, -12, 40, -12, 108, -64, 108, -64, 176, -308, 176, -308, 128, -404, 128, -404, 40, -384, 40, -384, 108, -240, 108 )

[node name="Spawn" type="Timer" parent="."]
autostart = true

[node name="waiting" type="Timer" parent="."]
wait_time = 4.0

[node name="Label" type="Label" parent="."]
margin_left = 188.0
margin_top = 32.0
margin_right = 456.0
margin_bottom = 46.0
text = "Hold Space to Move Slower but Hit Harder"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
[connection signal="timeout" from="waiting" to="." method="_on_waiting_timeout"]
